[package]
name = "ecu-stats"
version = "0.1.0"
license = "GPL-3.0-or-later"
edition = "2021"

[[bin]]
name = "ecufr"
path = "src/run.rs"

[lib]
name = "ecustats"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
canparse = { git="https://github.com/hicktech/canparse", features=["use-socketcan"] }
socketcan = "1.7"
sled = "0.34"
signal-hook = "0.3"
